# sumup-py

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  README.md  justfile  openapi.json  openapi.yaml  pyproject.toml  release-please-config.json  requirements-dev.txt  requirements-test.txt  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yaml  codegen.yaml  generate.yaml  lint-actions.yaml  publish.yaml
codegen/: .golangci.yml  Makefile  README.md  generate.go  go.mod  go.sum  load.go  main.go
codegen/pkg/builder/: builder.go  collect.go  doc.go  doc_test.go  http.go  intermediate_representation.go  methods.go  out.go  samples.go  transform.go  types.go
codegen/pkg/extension/: extension.go
codegen/templates/: api_version.py.tmpl  client.py.tmpl  index.py.tmpl  resource.py.tmpl  types.py.tmpl
examples/: card_reader_checkout.py  oauth2.py  online_checkout.py  pyproject.toml  sync.py  test.py  test_async.py  webhooks.py
sumup/: __init__.py  _api_version.py  _client.py  _enum.py  _exceptions.py  _secret.py  _service.py  _shared.py  _version.py  webhooks.py
sumup/checkouts/: __init__.py  resource.py  types.py
sumup/customers/: __init__.py  resource.py  types.py
sumup/members/: __init__.py  resource.py  types.py
sumup/memberships/: __init__.py  resource.py  types.py
sumup/merchant/: __init__.py  resource.py  types.py
sumup/merchants/: __init__.py  resource.py  types.py
sumup/payouts/: __init__.py  resource.py  types.py
sumup/readers/: __init__.py  resource.py  types.py
sumup/receipts/: __init__.py  resource.py  types.py
sumup/roles/: __init__.py  resource.py  types.py
sumup/shared/: __init__.py  resource.py  types.py
sumup/subaccounts/: __init__.py  resource.py  types.py
sumup/transactions/: __init__.py  resource.py  types.py
sumup/types/: __init__.py
tests/: conftest.py  test_additional_properties.py  test_query_params.py  test_request_bodies.py  test_secret.py  test_webhooks.py
