[project]
name = "sumup"
description = "Official Python SDK for the SumUp API."
version = "0.0.19"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["sdk", "sumup", "payments"]
authors = [{name = "SumUp", email = "support@sumup.com"}]
dynamic = ["dependencies", "optional-dependencies"]
classifiers = [
    "Typing :: Typed",
    "Development Status :: 4 - Beta",

    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    
    "Operating System :: OS Independent",

    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",

    "Natural Language :: English",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/sumup/sumup-py"
Issues = "https://github.com/sumup/sumup-py/issues"
"Source Code" = "https://github.com/sumup/sumup-py"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ["requirements-dev.txt" ,"requirements-test.txt"] }
test = { file = ["requirements-test.txt"] }

[tool.setuptools.packages.find]
include = ["sumup*"]

[tool.ruff]
line-length = 100

[tool.uv.workspace]
exclude = ["codegen", "examples"]
