[project]
name = "sumup"
description = "Official Python SDK for the SumUp API."
version = "0.0.20"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["sdk", "sumup", "payments"]
authors = [{name = "SumUp", email = "support@sumup.com"}]
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.11.3",
    "typing-extensions>=4.13.2",
]
classifiers = [
    "Typing :: Typed",
    "Development Status :: 4 - Beta",

    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",

    "Operating System :: OS Independent",

    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",

    "Natural Language :: English",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.2",
]

[dependency-groups]
test = ["pytest>=8.3.2"]
lint = ["ruff>=0.11.5"]
typecheck = ["ty>=0.0.8"]
dev = ["pytest>=8.3.2", "ruff>=0.11.5", "ty>=0.0.8"]

[project.urls]
Homepage = "https://github.com/sumup/sumup-py"
Issues = "https://github.com/sumup/sumup-py/issues"
"Source Code" = "https://github.com/sumup/sumup-py"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sumup*"]

[tool.setuptools.package-data]
sumup = ["py.typed"]

[tool.ruff]
line-length = 100

[tool.uv.workspace]
exclude = ["codegen", "examples"]
